Source/WebCore/rendering/style/RenderStyle.cpp
@@ -1666,6 +1666,15 @@ bool RenderStyle::hasEntirelyFixedBackground() const
     return allLayersAreFixed(backgroundLayers());
 }
 
+bool RenderStyle::hasAnyLocalBackground() const
+{
+    for (auto* layer = &backgroundLayers(); layer; layer = layer->next()) {
+        if (layer->image() && layer->attachment() == FillAttachment::LocalBackground)
+            return true;
+    }
+    return false;
+}
+
 const CounterDirectiveMap* RenderStyle::counterDirectives() const
 {
     return m_rareNonInheritedData->counterDirectives.get();
